gccida/c3/rename_block
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1467:6: error: use of undeclared identifier 'v35'
rtx *v35; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1469:6: error: use of undeclared identifier 'reg_loc'; did you mean 'realloc'?
rtx *reg_loc; // rax 
     ^~~~~~~
     realloc
/usr/include/malloc.h:49:14: note: 'realloc' declared here
extern void *realloc (void *__ptr, size_t __size)
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1469:5: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'void *(void *, unsigned long)')
rtx *reg_loc; // rax 
~~~ ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1489:27: error: expected ';' after expression
data.current_insn = ( rtx)v6; 
                          ^
                          ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1491:13: error: expected expression
v7 = ( rtx *)( v6 + 16); 
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1492:22: error: expected expression
for_each_rtx( ( rtx *)v6 + 4, rename_insn_1, &data); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1493:22: error: expected expression
for_each_rtx( ( rtx *)v6 + 7, rename_insn_1, &data); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1541:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( __int64)rtx[2]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1590:15: error: expected expression
v20 = *( rtx *)( ( char *)ssa_rename_to_hard[v19] + ( ( *v16 >> 13) & 0x7F8)); 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1646:1: error: use of undeclared identifier 'reg_loc'
reg_loc = done_renames->reg_loc; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1647:8: error: use of undeclared identifier 'reg_loc'; did you mean 'realloc'?
v38 = *reg_loc; 
       ^~~~~~~
       realloc
/usr/include/malloc.h:49:14: note: 'realloc' declared here
extern void *realloc (void *__ptr, size_t __size)
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1648:7: error: use of undeclared identifier 'reg_loc'; did you mean 'realloc'?
if ( *reg_loc != done_renames->old_reg ) 
      ^~~~~~~
      realloc
/usr/include/malloc.h:49:14: note: 'realloc' declared here
extern void *realloc (void *__ptr, size_t __size)
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1650:2: error: use of undeclared identifier 'reg_loc'
*reg_loc = done_renames->new_reg; 
 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1653:14: error: expected expression
v35 = ( rtx *)( ( ( *v38 >> 13) & 0x7F8) + 472 * v39 + 10653024); 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1653:1: error: use of undeclared identifier 'v35'
v35 = ( rtx *)( ( ( *v38 >> 13) & 0x7F8) + 472 * v39 + 10653024); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1655:1: error: use of undeclared identifier 'v35'
v35 = &ssa_rename_to_pseudo[( unsigned int)( v39 - 53)]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1656:2: error: use of undeclared identifier 'v35'; did you mean 'v38'?
*v35 = done_renames->prev_reg; 
 ^~~
 v38
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/ssa.c:1470:9: note: 'v38' declared here
_DWORD *v38; // rdx 
        ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rename_block/src/obj/ssa.o] Error 1
